tests/tutorial/wrapTutorial.h

typedef struct s_TUT_struct1 TUT_struct1;
int TUT_direction_func(int arg);
int TUT_useclass(const TUT_class1 * arg1);
TUT_class1 TUT_getclass2();
TUT_class1 TUT_getclass3();
TUT_class1 TUT_get_class_copy(int flag);
int TUT_callback1(int in, int ( * incr)(int));
TUT_struct1 TUT_return_struct(int i, double d);
TUT_struct1 * TUT_return_struct_ptr(int i, double d);
double TUT_accept_struct_in(TUT_struct1 arg);
double TUT_accept_struct_in_ptr(TUT_struct1 * arg);
void TUT_accept_struct_out_ptr(TUT_struct1 * arg, int i, double d);
void TUT_accept_struct_in_out_ptr(TUT_struct1 * arg);
const char * TUT_last_function_called();
void TUT_last_function_called_bufferify(char * SHF_rv, int NSHF_rv);