tests/tutorial/wrapftutorial.f


        function direction_func(arg) &
                result(SHT_rv) &
                bind(C, name="TUT_direction_func")
            use iso_c_binding, only : C_INT
            implicit none
            integer(C_INT), value, intent(IN) :: arg
            integer(C_INT) :: SHT_rv
        end function direction_func

        function c_useclass(arg1) &
                result(SHT_rv) &
                bind(C, name="TUT_useclass")
            use iso_c_binding, only : C_INT
            import :: SHROUD_capsule_data
            implicit none
            type(SHROUD_capsule_data), intent(IN) :: arg1
            integer(C_INT) :: SHT_rv
        end function c_useclass

        function c_getclass2() &
                result(SHT_rv) &
                bind(C, name="TUT_getclass2")
            import :: SHROUD_capsule_data
            implicit none
            type(SHROUD_capsule_data) :: SHT_rv
        end function c_getclass2

        function c_getclass3() &
                result(SHT_rv) &
                bind(C, name="TUT_getclass3")
            import :: SHROUD_capsule_data
            implicit none
            type(SHROUD_capsule_data) :: SHT_rv
        end function c_getclass3

        function c_get_class_copy(flag) &
                result(SHT_rv) &
                bind(C, name="TUT_get_class_copy")
            use iso_c_binding, only : C_INT
            import :: SHROUD_capsule_data
            implicit none
            integer(C_INT), value, intent(IN) :: flag
            type(SHROUD_capsule_data) :: SHT_rv
        end function c_get_class_copy

        function callback1(in, incr) &
                result(SHT_rv) &
                bind(C, name="TUT_callback1")
            use iso_c_binding, only : C_INT
            import :: callback1_incr
            implicit none
            integer(C_INT), value, intent(IN) :: in
            procedure(callback1_incr) :: incr
            integer(C_INT) :: SHT_rv
        end function callback1

        function return_struct(i, d) &
                result(SHT_rv) &
                bind(C, name="TUT_return_struct")
            use iso_c_binding, only : C_DOUBLE, C_INT
            import :: struct1
            implicit none
            integer(C_INT), value, intent(IN) :: i
            real(C_DOUBLE), value, intent(IN) :: d
            type(struct1) :: SHT_rv
        end function return_struct

        function c_return_struct_ptr(i, d) &
                result(SHT_rv) &
                bind(C, name="TUT_return_struct_ptr")
            use iso_c_binding, only : C_DOUBLE, C_INT, C_PTR
            import :: struct1
            implicit none
            integer(C_INT), value, intent(IN) :: i
            real(C_DOUBLE), value, intent(IN) :: d
            type(C_PTR) SHT_rv
        end function c_return_struct_ptr

        function accept_struct_in(arg) &
                result(SHT_rv) &
                bind(C, name="TUT_accept_struct_in")
            use iso_c_binding, only : C_DOUBLE
            import :: struct1
            implicit none
            type(struct1), value, intent(IN) :: arg
            real(C_DOUBLE) :: SHT_rv
        end function accept_struct_in

        function accept_struct_in_ptr(arg) &
                result(SHT_rv) &
                bind(C, name="TUT_accept_struct_in_ptr")
            use iso_c_binding, only : C_DOUBLE
            import :: struct1
            implicit none
            type(struct1), intent(IN) :: arg
            real(C_DOUBLE) :: SHT_rv
        end function accept_struct_in_ptr

        subroutine accept_struct_out_ptr(arg, i, d) &
                bind(C, name="TUT_accept_struct_out_ptr")
            use iso_c_binding, only : C_DOUBLE, C_INT
            import :: struct1
            implicit none
            type(struct1), intent(OUT) :: arg
            integer(C_INT), value, intent(IN) :: i
            real(C_DOUBLE), value, intent(IN) :: d
        end subroutine accept_struct_out_ptr

        subroutine accept_struct_in_out_ptr(arg) &
                bind(C, name="TUT_accept_struct_in_out_ptr")
            import :: struct1
            implicit none
            type(struct1), intent(INOUT) :: arg
        end subroutine accept_struct_in_out_ptr

        function c_last_function_called() &
                result(SHT_rv) &
                bind(C, name="TUT_last_function_called")
            use iso_c_binding, only : C_PTR
            implicit none
            type(C_PTR) SHT_rv
        end function c_last_function_called

        subroutine c_last_function_called_bufferify(SHF_rv, NSHF_rv) &
                bind(C, name="TUT_last_function_called_bufferify")
            use iso_c_binding, only : C_CHAR, C_INT
            implicit none
            character(kind=C_CHAR), intent(OUT) :: SHF_rv(*)
            integer(C_INT), value, intent(IN) :: NSHF_rv
        end subroutine c_last_function_called_bufferify

        ! splicer begin additional_interfaces
        subroutine all_test1(array)
          implicit none
          integer, dimension(:), allocatable :: array
        end subroutine all_test1
        ! splicer end additional_interfaces
    end interface

    interface class1_new
        module procedure class1_new_default
        module procedure class1_new_flag
    end interface class1_new

    interface function10
        module procedure function10_0
        module procedure function10_1_float
        module procedure function10_1_double
    end interface function10

    interface function5
        module procedure function5
        module procedure function5_arg1
        module procedure function5_arg1_arg2
    end interface function5

    interface function6
        module procedure function6_from_name
        module procedure function6_from_index
    end interface function6

    interface function7
        module procedure function7_int
        module procedure function7_double
    end interface function7

    interface function9
        module procedure function9_float
        module procedure function9_double
    end interface function9

    interface overload1
        module procedure overload1_num
        module procedure overload1_num_offset
        module procedure overload1_num_offset_stride
        module procedure overload1_3
        module procedure overload1_4
        module procedure overload1_5
    end interface overload1

    interface
        ! Copy the std::string in context into c_var.
        subroutine SHROUD_copy_string_and_free(context, c_var, c_var_size) &
             bind(c,name="TUT_ShroudCopyStringAndFree")
            use, intrinsic :: iso_c_binding, only : C_CHAR, C_LONG
            import SHROUD_array
            type(SHROUD_array), intent(IN) :: context
            character(kind=C_CHAR), intent(OUT) :: c_var(*)
            integer(C_LONG), value :: c_var_size
        end subroutine SHROUD_copy_string_and_free
    end interface

contains

    ! Class1() +name(new)
    ! function_index=0
    function class1_new_default() &
            result(SHT_rv)
        type(class1) :: SHT_rv
        ! splicer begin class.Class1.method.new_default
        SHT_rv%cxxmem = c_class1_new_default()
        ! splicer end class.Class1.method.new_default
    end function class1_new_default

    ! Class1(int flag +intent(in)+value) +name(new)
    ! function_index=1
    function class1_new_flag(flag) &
            result(SHT_rv)
        use iso_c_binding, only : C_INT
        integer(C_INT), value, intent(IN) :: flag
        type(class1) :: SHT_rv
        ! splicer begin class.Class1.method.new_flag
        SHT_rv%cxxmem = c_class1_new_flag(flag)
        ! splicer end class.Class1.method.new_flag
    end function class1_new_flag

    ! ~Class1() +name(delete)
    ! function_index=2
    subroutine class1_delete(obj)
        use iso_c_binding, only : C_NULL_PTR
        class(class1) :: obj
        ! splicer begin class.Class1.method.delete
        call c_class1_delete(obj%cxxmem)
        obj%cxxmem%addr = C_NULL_PTR
        ! splicer end class.Class1.method.delete
    end subroutine class1_delete

    ! int Method1()
    ! function_index=3
    !>
    !! \brief returns the value of flag member
    !!
    !<
    function class1_method1(obj) &
            result(SHT_rv)
        use iso_c_binding, only : C_INT
        class(class1) :: obj
        integer(C_INT) :: SHT_rv
        ! splicer begin class.Class1.method.method1
        SHT_rv = c_class1_method1(obj%cxxmem)
        ! splicer end class.Class1.method.method1
    end function class1_method1

    ! bool equivalent(const Class1 & obj2 +intent(in)) const
    ! function_index=4
    !>
    !! \brief Pass in reference to instance
    !!
    !<
    function class1_equivalent(obj, obj2) &
            result(SHT_rv)
        use iso_c_binding, only : C_BOOL
        class(class1) :: obj
        type(class1), intent(IN) :: obj2
        logical :: SHT_rv
        ! splicer begin class.Class1.method.equivalent
        SHT_rv = c_class1_equivalent(obj%cxxmem, obj2%cxxmem)
        ! splicer end class.Class1.method.equivalent
    end function class1_equivalent

    ! Class1 * returnThis()
    ! function_index=5
    !>
    !! \brief Return pointer to 'this' to allow chaining calls
    !!
    !<
    subroutine class1_return_this(obj)
        class(class1) :: obj
        ! splicer begin class.Class1.method.return_this
        call c_class1_return_this(obj%cxxmem)
        ! splicer end class.Class1.method.return_this
    end subroutine class1_return_this

    ! Class1 * returnThisBuffer(std::string & name +intent(in), bool flag +intent(in)+value)
    ! arg_to_buffer
    ! function_index=6
    !>
    !! \brief Return pointer to 'this' to allow chaining calls
    !!
    !<
    function class1_return_this_buffer(obj, name, flag) &
            result(SHT_rv)
        use iso_c_binding, only : C_BOOL, C_INT
        class(class1) :: obj
        character(len=*), intent(IN) :: name
        logical, value, intent(IN) :: flag
        logical(C_BOOL) SH_flag
        type(class1) :: SHT_rv
        SH_flag = flag  ! coerce to C_BOOL
        ! splicer begin class.Class1.method.return_this_buffer
        SHT_rv%cxxmem = c_class1_return_this_buffer_bufferify(obj%cxxmem, &
            name, len_trim(name, kind=C_INT), SH_flag)
        ! splicer end class.Class1.method.return_this_buffer
    end function class1_return_this_buffer

    ! DIRECTION directionFunc(DIRECTION arg +intent(in)+value)
    ! function_index=7
    function class1_direction_func(obj, arg) &
            result(SHT_rv)
        use iso_c_binding, only : C_INT
        class(class1) :: obj
        integer(C_INT), value, intent(IN) :: arg
        integer(C_INT) :: SHT_rv
        ! splicer begin class.Class1.method.direction_func
        SHT_rv = c_class1_direction_func(obj%cxxmem, arg)
        ! splicer end class.Class1.method.direction_func
    end function class1_direction_func

    ! int getM_flag()
    ! function_index=8
    function class1_get_m_flag(obj) &
            result(SHT_rv)
        use iso_c_binding, only : C_INT
        class(class1) :: obj
        integer(C_INT) :: SHT_rv
        ! splicer begin class.Class1.method.get_m_flag
        SHT_rv = c_class1_get_m_flag(obj%cxxmem)
        ! splicer end class.Class1.method.get_m_flag
    end function class1_get_m_flag

    ! int getTest()
    ! function_index=9
    function class1_get_test(obj) &
            result(SHT_rv)
        use iso_c_binding, only : C_INT
        class(class1) :: obj
        integer(C_INT) :: SHT_rv
        ! splicer begin class.Class1.method.get_test
        SHT_rv = c_class1_get_test(obj%cxxmem)
        ! splicer end class.Class1.method.get_test
    end function class1_get_test
